--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,141 @@
 	padding: 0;
 	margin: 0;
 }
+
+body {
+	position: relative;
+	min-height: 100vh;
+}
+
+header {
+	background-color: orangered;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 3rem;
+	font-weight: bold;
+}
+
+main {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, 355px);
+	grid-auto-rows: 285px;
+	gap: 20px;
+	margin-left: 1.8em;
+	margin-top: 1.2em;
+}
+
+main > div {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	border: 1px solid black;
+	background-color: lightgoldenrodyellow;
+	padding: 0.5em 0 0.8em 0;
+}
+
+main > div:first-child {
+	grid-area: 1 / 1 / 2 / 2;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 1em;
+	font-weight: bold;
+}
+
+main > div:first-child > img {
+	cursor: pointer;
+	width: 100px;
+	height: auto;
+}
+
+.new-project-input-dialog {
+	visibility: hidden;
+	width: 350px;
+	height: 140px;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	margin: auto;
+	border: 1px solid black;
+	background-color: rgb(232, 230, 230);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 0.8em;
+}
+
+.new-project-input-dialog > img,
+.todo-popup-form > img {
+	width: 15px;
+	height: auto;
+	align-self: end;
+	border: 1px solid black;
+	border-top-style: none;
+	border-right-style: none;
+	cursor: pointer;
+}
+
+.new-project-input-dialog > button {
+	width: 60px;
+}
+
+.todo-popup-form {
+	visibility: hidden;
+	width: 410px;
+	height: 485px;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	margin: auto;
+	display: flex;
+	flex-direction: column;
+	gap: 1em;
+	border: 1px solid black;
+	background-color: rgb(232, 230, 230);
+	padding: 0 0 0 20px;
+	outline: none;
+}
+
+.todo-popup-form label,
+.todo-popup-form fieldset p {
+	display: inline-block;
+	width: 80px;
+	text-align: right;
+	vertical-align: top;
+}
+
+.todo-popup-form input,
+.todo-popup-form textarea,
+.todo-popup-form select {
+	outline: none;
+}
+
+textarea {
+	font-family: 'Arial';
+}
+
+.todo-popup-form > h2 {
+	align-self: center;
+	margin-bottom: 0.5em;
+	font-weight: bold;
+}
+
+.todo-popup-form > button:first-of-type {
+	align-self: start;
+	padding: 0.1em 0.7em;
+	margin-left: 6.4em;
+	background-color: rgb(241, 241, 44);
+	cursor: pointer;
+}
+
+.todo-popup-form > button:last-of-type {
+	align-self: center;
+	padding: 0.1em 0.7em;
+	cursor: pointer;
+}
