--- a/src/styles.css
+++ b/src/styles.css
@@ -35,9 +35,27 @@ main > div {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	position: relative;
 	border: 1px solid black;
 	background-color: lightgoldenrodyellow;
 	padding: 0.5em 0 0.8em 0;
+}
+
+.edit-icon {
+	width: 15px;
+	height: auto;
+	position: absolute;
+	right: 20px;
+	top: 9px;
+	cursor: pointer;
+}
+
+.delete-icon {
+	width: 17px;
+	height: auto;
+	position: absolute;
+	right: 0px;
+	cursor: pointer;
 }
 
 main > div:first-child {
@@ -162,6 +180,7 @@ textarea {
 	font-weight: bold;
 	text-align: center;
 	font-size: 1.3rem;
+	outline: none;
 }
 
 .todo-list {
@@ -218,4 +237,41 @@ textarea {
 
 .redbg {
 	background-color: red;
+}
+
+dialog:has(.confirmation-dialog) {
+	width: 350px;
+	height: 80px;
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	margin: auto;
+	border: 1px solid black;
+	overflow: clip;
+}
+
+#confirmation-text {
+	text-align: center;
+	margin-bottom: 8px;
+}
+
+.confirmation-dialog {
+	background-color: rgb(222, 220, 220);
+	height: 100%;
+	padding-top: 20px;
+}
+
+.yesnobuttonsdiv {
+	display: flex;
+	justify-content: center;
+	gap: 1em;
+}
+
+#yes-button,
+#no-button {
+	cursor: pointer;
+	outline: none;
+	width: 10%;
 }
