--- a/src/styles.css
+++ b/src/styles.css
@@ -326,14 +326,22 @@ dialog:has(.checklist) {
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	gap: 2em;
+	gap: 1.5em;
 	background-color: rgb(214, 211, 211);
+	overflow-y: auto;
+}
+
+#checklist-heading {
+	align-self: center;
+	font-weight: bold;
 }
 
 .checklist-bottom-buttons-div {
 	display: flex;
-	gap: 2em;
+	gap: 1em;
 	align-self: center;
+	margin-top: 1em;
+	margin-bottom: 1em;
 }
 
 #add-new-item-btn,
