--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@
 
 body {
 	min-height: 100vh;
+	background-color: rgba(128, 128, 128, 0.09);
 }
 
 .relative-position {
@@ -19,12 +20,14 @@ body {
 }
 
 header {
-	background-color: orangered;
+	background-color: rgba(255, 68, 0, 0.825);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	font-size: 3rem;
-	font-weight: bold;
+	/* font-weight: bold; */
+	text-shadow: 2px 2px 6px rgba(168, 148, 148, 0.8);
+	box-shadow: 0px 6px 3px rgba(255, 68, 0, 0.806);
 }
 
 main {
@@ -42,19 +45,20 @@ main > div {
 	justify-content: space-between;
 	position: relative;
 	border: 1px solid black;
-	background-color: lightgoldenrodyellow;
+	border-radius: 1.5em;
+	background-color: rgb(250, 250, 210);
 	padding: 0.5em 0 0.8em 0;
 }
 
 .edit-icon-div {
 	width: 15px;
-	right: 20px;
+	right: 30px;
 	top: 9px;
 }
 
 .del-icon-div {
 	width: 17px;
-	right: 0px;
+	right: 10px;
 }
 
 .edit-icon {
@@ -115,6 +119,7 @@ dialog:has(.new-project-input-dialog) {
 	border: 1px solid black;
 	border-top-style: none;
 	border-right-style: none;
+	border-radius: 0.1em;
 	cursor: pointer;
 }
 
@@ -126,6 +131,7 @@ dialog:has(.new-project-input-dialog) {
 dialog:has(.todo-popup-form) {
 	width: 430px;
 	height: 485px;
+	border-radius: 0.3em;
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -178,8 +184,12 @@ textarea {
 	align-self: start;
 	padding: 0.1em 0.7em;
 	margin-left: 6.4em;
-	background-color: rgb(241, 241, 44);
+	background-color: rgb(229, 228, 228);
 	cursor: pointer;
+}
+
+#checklist-btn:hover {
+	background-color: rgb(250, 250, 9);
 }
 
 #todo-save-btn {
@@ -208,8 +218,13 @@ textarea {
 	width: 50%;
 	align-self: center;
 	padding: 0.5em 0;
+	border-radius: 0.5em;
 	cursor: pointer;
 	outline: none;
+}
+
+.new-todo-btn:hover {
+	background-color: rgb(255, 140, 0);
 }
 
 .lightgraybg {
@@ -233,11 +248,21 @@ textarea {
 }
 
 .priority-and-status {
+	border: 1px solid black;
+	border-radius: 0.4em;
 	text-align: center;
+	font-size: 0.95rem;
+	cursor: default;
 }
 
 .edit-and-delete {
+	border: 1px solid black;
+	border-radius: 0.4em;
 	cursor: pointer;
+}
+
+.edit-and-delete:hover {
+	background-color: rgb(228, 225, 225);
 }
 
 .lightgreenbg {
@@ -312,6 +337,7 @@ dialog:has(.confirmation-dialog) {
 dialog:has(.checklist) {
 	width: 430px;
 	height: 485px;
+	border-radius: 0.3em;
 	position: fixed;
 	top: 0;
 	right: 0;
@@ -334,6 +360,9 @@ dialog:has(.checklist) {
 #checklist-heading {
 	align-self: center;
 	font-weight: bold;
+	border-bottom: 1px solid black;
+	padding-bottom: 0.05em;
+	letter-spacing: 0.04em;
 }
 
 .checklist-bottom-buttons-div {
@@ -348,8 +377,18 @@ dialog:has(.checklist) {
 #done-checklist-btn,
 #save-new-checklist-item-btn {
 	width: 8em;
+	border: 1px solid black;
+	border-radius: 0.4em;
+	padding: 0.2em 0;
+	background-color: rgb(232, 230, 230);
 	outline: none;
 	cursor: pointer;
+}
+
+#add-new-item-btn:hover,
+#done-checklist-btn:hover,
+#save-new-checklist-item-btn:hover {
+	background-color: rgb(222, 219, 219);
 }
 
 .checklist-items-div {
